[gd_scene load_steps=2 format=2]

[ext_resource path="res://Events/Practice/Practice.gd" type="Script" id=1]

[node name="Practice" type="Spatial"]
script = ExtResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Interface" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Interface"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 10

[node name="Spring" type="Control" parent="CanvasLayer/Interface/VBoxContainer"]
margin_right = 984.0
margin_bottom = 476.0
mouse_filter = 2
size_flags_vertical = 3

[node name="PracticeProgress" type="ProgressBar" parent="CanvasLayer/Interface/VBoxContainer"]
unique_name_in_owner = true
margin_top = 486.0
margin_right = 984.0
margin_bottom = 500.0
max_value = 10.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Interface/VBoxContainer"]
margin_top = 510.0
margin_right = 984.0
margin_bottom = 560.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Interface/VBoxContainer/MarginContainer"]
margin_right = 984.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="Song" type="OptionButton" parent="CanvasLayer/Interface/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 984.0
margin_bottom = 20.0

[node name="Start" type="Button" parent="CanvasLayer/Interface/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 984.0
margin_bottom = 50.0
text = "Start"

[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="item_selected" from="CanvasLayer/Interface/VBoxContainer/MarginContainer/VBoxContainer/Song" to="." method="_on_Song_item_selected"]
[connection signal="pressed" from="CanvasLayer/Interface/VBoxContainer/MarginContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
